--- a/learn.html
+++ b/learn.html
@@ -217,7 +217,7 @@ A calculator implementation of this equation is at the top of this page.<br></p>
 			<h6>Solar sails</h6>
 			<p6>TODO</p>
 			<h5>Orbit terminology:</h5>
-			<img src="img/orbit.png" height="519">
+			<!--<img src="img/orbit.png" height="519"> Why does this not work?-->
 			<p>
 (How does the CSS layout work here? I can not figure it out.)
 			</p>
