--- a/learn.html
+++ b/learn.html
@@ -102,6 +102,8 @@ rel='stylesheet' type='text/css'>
             of various undertakings in space. Getting a feel for how your equipment interacts with the environment 
             is really central to designing life in space. We will expand and refine all these with time, making them 
             more intuitive with graphics, combining them, and so on.</p>
+            <noscript><p>It seems like you do not have JavaScript enabled. If that is your intention, we are just telling you that the scripts on this site do not collect any data about you, and are only used for fonts and styling<br>
+            The calulators are also based on JavaScript, and they do not work without. They are free software under the terms of the GPL.</p></noscript>
    </div>
    </div>
 <br class="clearboth">
