new images and sketchfab
Former-commit-id: 39f1cd634646d88f7f8aeee9f29c0d17f6d815fa [formerly 6edf9c2de825489bd5d8ea3ceeb2c714fafdbf67]
Former-commit-id: 415f5e5d84c6f69c5e75e83785069eb053df6c33

--- a/about.html
+++ b/about.html
@@ -139,6 +139,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	</div>
 		<div class="rowR">
 			<div class="col-10r12 col-m-12">
+			<div class="darkYellow">
+				
+			</div>
 			<div class="darkYellow" id="plans">
 			<img src="http://www.moonwards.com/img/ILD-CGER-website.png" alt="A chart of all planned space exploration in the next 25 years">
 			<p>
