--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
 <link rel="stylesheet" href="css/main.css">
 <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,400italic,600,200'
 rel='stylesheet' type='text/css'>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
 <script src="js/modernizr-2.8.3.min.js"></script>
@@ -441,22 +439,24 @@ a different place. All the current models and the mission timelines for them are
 					<br class="clearboth">
 				<div class="pix centerit">
 					<iframe width="640" height="480" src="https://sketchfab.com/models/67e479e1e9ea4ca5b4a43e09a39be4fe/embed" frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>		
-					<p class="black">
+					
+				</div>
+				<p class="blackwide">
 						This is a version of the colony at the end of mission 3 when the first hab is ready. The main pieces that make this possible are introduced here, and then explained further in the models that follow. 
 						Note that the hab right now is empty, it needs all its internal structures and furnishings built, not to mention its garden.
 					</p>
-				</div>
 				<br class="clearboth">
 				<div class="pix centerit">
-					<iframe width="640" height="480" src="https://sketchfab.com/models/4e1ce3ae52194aa6b468e9a36c992422/embed" frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
-					<p class="black">
+					<iframe width="640" height="480" src="https://sketchfab.com/models/1621e5f3283840b6b02385cfd8ec98dd/embed" frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+				</div>
+				<p class="blackwide">
 						This whole colony concept depends on basalt being used for a great many things, and on focused sunlight being used to process it. The Melt-In-Place Station comes up on the first mission to test and refine 
 						how to make building materials out of the basalt dust all over the dark areas of the Moon. In the vacuum of space this basalt feedstock will behave differently than such material on Earth, 
 						and it has a chemical make-up different than anything found here. It is absolutely free of hydrated minerals (with water molecules in their crystal structure) and organic chemicals, 
 						has a higher content of iron and titanium, and its chemicals are highly reduced (meaning they tend to have extra electrons). Analysis done on Earth indicates that could mean basalt 
 						materials on the Moon would be a lot <i>stronger</i> than they are here. We won't know until we experiment there.
 					</p>
-				</div>
+					<br class="clearboth">
 				<div class="pix centerit">
 					<iframe width="640" height="480" src="https://sketchfab.com/models/725b90da58d14b778ab155c85b1bd425/embed" 
 					frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
@@ -544,6 +544,9 @@ a different place. All the current models and the mission timelines for them are
 				<p class="black roundAll">
 		 			May 31 - Updated content is being added below and this section is going to be disorganized for a while.
 		 		</p> 
+		 		<div class="darkYellow pix">
+		 		<img src="http://moonwards.com/img/GalleryWithSideCylinder.jpg" alt="image of long gallery structure descending into crater">
+		 		</div>
 				<div class="darkYellow pix">
 			<img src="http://moonwards.com/img/GibB1400.jpg" alt="overview of first structures">
 			<button class="numbers tooltipMR" style="top: 20%; left: 49%;">5
