new explanatory files for css, clean up of css
Former-commit-id: 845dfdca4595052f8094df7b9f5bc54ff828ac0a

--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ a different place. All the current models and the mission timelines for them are
 						mouse or slide your finger, your view will rotate around it. Consider clicking the button on the far right to show the model full-screen. 
 					</p>
 					<br class="clearboth">
-				<div class="pix centerit">
+				<div class="floatL pad15">
 					<iframe width="640" height="480" src="https://sketchfab.com/models/67e479e1e9ea4ca5b4a43e09a39be4fe/embed" frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>		
 					
 				</div>
@@ -446,7 +446,7 @@ a different place. All the current models and the mission timelines for them are
 						Note that the hab right now is empty, it needs all its internal structures and furnishings built, not to mention its garden.
 					</p>
 				<br class="clearboth">
-				<div class="pix centerit">
+				<div class="floatL pad15">
 					<iframe width="640" height="480" src="https://sketchfab.com/models/1621e5f3283840b6b02385cfd8ec98dd/embed" frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
 				</div>
 				<p class="blackwide">
@@ -457,16 +457,16 @@ a different place. All the current models and the mission timelines for them are
 						materials on the Moon would be a lot <i>stronger</i> than they are here. We won't know until we experiment there.
 					</p>
 					<br class="clearboth">
-				<div class="pix centerit">
+				<div class="floatL pad15">
 					<iframe width="640" height="480" src="https://sketchfab.com/models/346fb779ca474db4b31beb817b43e056/embed" frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
 				</div>
 				<br class="clearboth">
-				<div class="pix centerit">
+				<div class="floatL pad15">
 					<iframe width="640" height="480" src="https://sketchfab.com/models/725b90da58d14b778ab155c85b1bd425/embed" 
 					frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
 				</div>
 				<br class="clearboth">
-				<div class="pix centerit">
+				<div class="floatL pad15">
 					<iframe width="640" height="480" src="https://sketchfab.com/models/4846483593ec499b8d8fac77d38077ab/embed" 
 					frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>   
 				</div>		
