recruiting and navigation
Former-commit-id: 2677ee761039121678545a2e309d0b00909ae8c2

--- a/browsergame/tutorial.html
+++ b/browsergame/tutorial.html
@@ -27,6 +27,8 @@ Your budget is shown in red below the current time.</p>
 <p>The current time is shown in grey. You can fast forward with the buttons below it.</p>
 <h4>In short</h4>
 <p>Buy parts, stick them together, and launch into space.<br>Then navigate towards the Moon, land and build a base.<br>That is not more complicated than in real life.</p>
+<h4>Interacting with the game</h4>
+<p>As for now, the game has few graphical elements, and HTML is only used as a framework for multiple "views", structured as menus. Most actions are performed by clicking on blue words. (And if the background of a word changes when you hoover over it, you can probably click it too.)</p>
 <p><a href="shell.html">Back to the game</a></p>
 <p>The text on this page is centre-aligned, because that is a cool layout.<br>
 Do not tell my anything about CSS!
