--- a/planning.html
+++ b/planning.html
@@ -29,22 +29,6 @@
 <link rel="stylesheet" href="css/accordian.css">
 <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,400italic,600,200'
 rel='stylesheet' type='text/css'>
-
-<style>
-	.linktitle {
-		width: 100%;
-		font-weight: 600;
-		background-color: rgba(50, 50, 0, 0.7);
-		border-radius: 20px;
-		text-align: center;
-		padding: 5px;
-	}
-	.currenttitle {
-		border: 1px solid yellow;
-	}
-</style>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
 <script src="js/modernizr-2.8.3.min.js"></script>
@@ -72,10 +56,9 @@ rel='stylesheet' type='text/css'>
   				</ul>
   			</li>
   			<li><a href="planning.html">Plan</a>
-  				<ul>
+  			<ul>
   					<li><a href="planning.html#equipment">Equipment</a></li>
   					<li><a href="planning.html#structures">Structures</a></li>
-  					<li><a href="planning.html#environment">Environment</a></li>
   				</ul>
   			</li>
   			<li><a href="learn.html">Learn</a>
@@ -100,42 +83,73 @@ rel='stylesheet' type='text/css'>
      		<span class="yellow">Cernan's Promise</span> VMC</span> </h1>
     </div>
     <div class="rowL">
-		 <h2 class="col-3 col-m-4">
+		 <h2 class="col-3 col-m-3">
 		 	<span style="color: yellow; line-height: 1.1em;">Currently working on:</span> First Draft
 		 </h2>
-		 <div class="col-9 col-m-10">
-		 <p class="intro">
-		 We're building the first draft now. 
-		 It develops how to build an extensive permanent colony on the Moon. 
-		 The main thing is that this is a vision of what could be done if there was a serious drive for settlement, 
-		 where a group of nations considered it important enough to devote significant funds to the task.  
-		 Cernan's Promise is the seed of much, much greater things. 
-		 Its goals are permanence, scale, flexibility, and ecosystem creation. 
-		 <br><br>
-		 <span style="font-weight: 400italic; color: yellow;">
-		 This is a collaborative project open to anyone who can pitch in.
-		 If you are interested in participating, leave a message in the forum or email me, kim@moonwards.com. You 
-		 can also go to the <a href="https://github.com/briligg/moonwards">GitHub page</a>. 
-		 Another interesting window is the project's <a href="https://realtimeboard.com/app/board/o9J_k0iGgz4=/">
-		 Realtimeboard</a> entries. Input is always welcome.  
-		 What should be added here? What needs improving? What would you like to work on? What do you think?</span><br><br>
-		 <i>Note May 14 2016 - This page has stalled a little as i try to figure out how best to use it. A lot of 
-		 what it was meant to do has now been taken over by the GitHub and RealTimeBoard pages mentioned above. 
-		 I think it should host the incomplete plans, to document how they come together over time, and a lot of 
-		 shamelessly niggling and overly detailed documentation of all the elements - which curiously in some ways 
-		 is easier to do than the carefully edited stuff i put up right now. I have 
-		 in fact built several new models over the last few months, and developed plans together with others. 
-		 You can see most of them at my <a href="https://sketchfab.com/briligg">Sketchfab account</a>, though many 
-		 have yet to be configured and annotated. I am about to leave for the<a href="http://isdc.nss.org/2016/#/">
-		  International Space Development 
-		 Conference</a>, where i give 3 presentations this year. I can at least say that they will see these new 
-		 models and updated plans. When i get back, i'll settle down to updating everything here. Thank you for 
-		 your patience. :)</i>
-		 </p>
+		 <div class="col-9 col-m-9 intro">
+			 <p>
+			 We're building the first draft now. 
+			 It develops how to build an extensive permanent colony on the Moon. 
+			 The main thing is that this is a vision of what could be done if there was a serious drive for settlement, 
+			 where a group of nations considered it important enough to devote significant funds to the task.  
+			 Cernan's Promise is the seed of much, much greater things. 
+			 Its goals are permanence, scale, flexibility, and ecosystem creation. 
+			 <br><br>
+			 This is an
+			 <span style="color: yellow;">Open Source Project</span>. 
+			 At the links below are all the files and resources that make it up, anyone is free to download them, 
+			 alter them, reuse them, comment on the project, or get involved. If you use these files on another project, 
+			 please credit Moonwards by including the name and a link to the main page, or listing the website address, 
+			 and please let us know so we can check it out. 
+			 If you are interested in participating, leave a message in the forum or email me, 
+			 <span style="color: yellow;">kim@moonwards.com</span>. All material is licensed under the
+			 <a href="http://www.gnu.org/licenses/gpl-3.0.en.html">Gnu Public License</a> version 3 or later.
+			 </p>
+		 <div class="col-2 col-m-2">
+			 <h3><a href="https://github.com/briligg/moonwards">GitHub page</a></h3>
 		 </div>
+		 <div class="col-7 col-m-7">
+		 <p>
+			 This is the Moonwards repository containing all its files, including the Blender files of all 
+			 models
+			 </p>
+		 </div>
+			<br class="clearboth">
+		 <div class="col-2 col-m-2">
+			 <h3><a href="https://realtimeboard.com/app/board/o9J_k0iGgz4=/">Realtimeboard</a></h3>
+		 </div>
+		 <div class="col-7 col-m-7">
+		 <p>
+		 	This is a whiteboard service where all the planning is done. It has a lot of material, 
+		 	from rough ideas to resources to tweaking. If you want to comment on something there 
+		 	you can do so by clicking the comment button in the left toolbar, clicking where you want to 
+		 	pin the comment, and typing.
+		 	</p>
+		 </div>
+		 <br class="clearboth">
+		 <div class="col-2 col-m-2">
+			 <h3><a href="https://sketchfab.com/briligg">Sketchfab account</a></h3>
+		 </div>
+		 <div class="col-7 col-m-7">
+		 <p>
+		 	Here are all the interactive 3d models of colony installations. Most are already embedded on the main 
+		 	page but a few aren't. You can download the Blender files for those objects there, as well.
+		 	</p>
+		 </div>
+		 <br class="clearboth">
+		<div class="col-2 col-m-2">
+			 <h3><a href="https://space.stackexchange.com/">Space.SE</a></h3>
+		</div>
+		<div class="col-7 col-m-7">
+		<p>
+			Have questions about stuff you see here? Space.SE is a great place to find out more, and if what you 
+			wanted to know isn't there, you can ask. 
+		</div>
+		</div>	 
 	 </div>
 
 	 <div class="rowR" id="equipment">
+		
 	 	<div class="col-8 col-m-10">
 		 	<div class="black roundAll">
 			 	<p><strong>Installations and Equipment:</strong> 
@@ -162,6 +176,9 @@ rel='stylesheet' type='text/css'>
 			 		</ul>
 		 	</div>
 	 	</div>
+	 	<h2 class="col-3 col-m-2">
+	 		General Design Principals
+		</h2>
 	 </div>
 	 <div class="rowR">
 	 	 	<div class="col-8 col-m-9 black">
