fixed mismatching tags, and removed layout commentary
Former-commit-id: bfbe05f4ed0cf644ccf50e0a96d2c9ba276bb838 [formerly 1c96571b5b08b3c0db727a95a960558c0f43cf14]
Former-commit-id: 2f1d8c9860d9dafb0fc8e93216818e0f4fee450d

--- a/learn.html
+++ b/learn.html
@@ -214,7 +214,7 @@ A calculator implementation of this equation is at the top of this page.<br></p>
 			<h6>Ion engines</h6>
 			<p>TODO</p>
 			<h6>Solar sails</h6>
-			<p6>TODO</p>
+			<p>TODO</p>
 			<h5>Orbit terminology:</h5>
 			<img class="realsize" src="img/orbit.png" height="519">
 			<p>
