fixed some incorrect HTML
Former-commit-id: c6e8aba0844a685b2a2bc2bda34e5ea2da93bfee

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ rel='stylesheet' type='text/css'>
   			</li>
   			<li><a href="learn.html">Learn</a>
   				<ul>
-  					<li><a href="learn.html#calculators">Calculators</li>
+  					<li><a href="learn.html#calculators">Calculators</a></li>
   				</ul>
   			<li><a href="about.html">Why</a>
   				<ul>
@@ -989,7 +989,7 @@ a different place. All the current models and the mission timelines for them are
 		 		could be done. Even with an ambitious set of tasks, it can be delivered by a Falcon Heavy, with an 
 		 		estimated payload of 7.5 metric tons.
 		 	</p>
-		 	<p id="mission1"class="darkYellow">
+		 	<p id="mission1" class="darkYellow">
 		 		<b class="yellow">Mission 1:</b> &nbsp; One Falcon Heavy.&nbsp; <b>Purpose</b>: Survey area, 
 		 		conduct experiments to establish construction methodologies, test prototype 
 		 		technology, assess solar furnace prototype.
@@ -1011,7 +1011,6 @@ a different place. All the current models and the mission timelines for them are
 		 		</li>
 		 		<li class="black">Solar Furnace, including full mirror, tank, support structures, and
 		 		short tower - 1 t
-		 		</li>
 		 		</li>
 		 		<li class="black">Test Cart including crucibles, tanks, molds, equipment to mechanically test 
 		 		samples, various sensors and scopes - 0.3 t
