--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   			</li>
   			<li><a href="learn.html">Learn</a>
   				<ul>
-  					<li><a href="learn.html#calculators">Calculators</li>
+  					<li><a href="learn.html#calculators">Calculators</a></li>
   				</ul>
   			<li><a href="about.html">Why</a>
   				<ul>
