--- a/index.html
+++ b/index.html
@@ -98,8 +98,14 @@ rel='stylesheet' type='text/css'>
 		 <h2 class="col-10 col-m-12">
 		 	<span class="yellow">Site:</span> East rim of <span class="yellow">Lalande Crater</span>, 4.5<sup>o</sup>S 8<sup>o</sup>W
 		 </h2>
+		 
 	 </div>
-	 <div class="rowL black85">	 
+	 <div class="rowL black85">
+	 	<div class="col-12 col-m-12">
+		 	<p class="centertext yellow">
+		 	Hover over or tap the numbered markers to see more information.
+		 	</p>
+		 </div>	 
 				<div class="col-4 col-m-4">
 				<div class="darkYellow pix">
 					<button class="numbers tooltipBMR" style="top: 65%; left: 50%;">1
