--- a/index.html
+++ b/index.html
@@ -85,13 +85,18 @@ rel='stylesheet' type='text/css'>
      		<span class="yellow">C</span>olony Project: 
      		<span class="yellow">Cernan's Promise</span> VMC</span> </h1>
     </div>
-    <div class="rowR">
+    <div class="rowR pix">
      		<p class="col-9r12 col-m-10r12 black roundLeft">
      		Here is a vision of what a focused drive to settle the Moon could create. It uses known technology. 
      		It works towards a complete local economy independent of Earth, and a self-sustaining ecosystem. 
      		It would fundamentally change the way humanity sees itself and its place in the universe. 
-     		It's the future we haven't created because we just don't see its potential - yet. Cernan's Promise is 
-     		going to change that.
+     		It's the future we haven't created because we just don't see its potential - yet. 
+     		Cernan's Promise<sup class="yellow tooltipTL">[1]
+     		<span style="font-size: 1.3em; line-height: 1.3em;">"We leave as we came and, God willing, as we shall return: with 
+     		peace and hope for all mankind" - Gene Cernan, as he stepped off the Moon, Apollo 17, Dec 19, 1972</span></sup> is 
+     		going to change that. We are building a virtual Moon colony anyone can visit online, to 
+     		play at living there, building it, and exploring its possibilitis. With that experience, why 
+     		it matters becomes clear.
      		</p>
     </div>
     <div class="rowL">
