new intro main page
Former-commit-id: 2c5da486e5665a1e10c3aac0126bdc1272b2d2b2

--- a/index.html
+++ b/index.html
@@ -94,9 +94,10 @@ rel='stylesheet' type='text/css'>
      		Cernan's Promise<sup class="yellow tooltipTL">[1]
      		<span style="font-size: 1.3em; line-height: 1.3em;">"We leave as we came and, God willing, as we shall return: with 
      		peace and hope for all mankind" - Gene Cernan, as he stepped off the Moon, Apollo 17, Dec 19, 1972</span></sup> is 
-     		going to change that. We are building a virtual Moon colony anyone can visit online, to 
-     		play at living there, building it, and exploring its possibilitis. With that experience, why 
-     		it matters becomes clear.
+     		going to change that. It will exist on a virtual online Moon as a virtual colony, scientifically and technically realistic. 
+     		Visitors will be able to move through it, operate machines and manipulate objects, act out daily life, construction, and 
+     		exploration, design and add to the colony, have discussions and create videos within it. Through this, why a real 
+     		colony is important will become clear, and the will to act on that will arise.
      		</p>
     </div>
     <div class="rowL">
