refine intro main page
Former-commit-id: c04fdb2e0e9ef7635600607281a86956f8f50253 [formerly 23cc6015869a0d6dcf0c3a6b5d4771b7e46998f0]
Former-commit-id: a426062648e2645cda189caf932059a02e7b9cc6

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ rel='stylesheet' type='text/css'>
      		going to change that. It will exist on a virtual online Moon as a virtual colony, scientifically and technically realistic. 
      		Visitors will be able to move through it, operate machines and manipulate objects, act out daily life, construction, and 
      		exploration, design and add to the colony, have discussions and create videos within it. Through this, why a real 
-     		colony is important will become clear, and the will to act on that will arise.
+     		colony is important becomes clear, and the will to act on that arises.
      		</p>
     </div>
     <div class="rowL">
