fix layout issue
Former-commit-id: 291f631bbe6530d092a9517da076a24a0bdaeee1

--- a/planning.html
+++ b/planning.html
@@ -83,10 +83,10 @@ rel='stylesheet' type='text/css'>
      		<span class="yellow">Cernan's Promise</span> VMC</span> </h1>
     </div>
     <div class="rowL">
-		 <h2 class="col-3 col-m-3">
+		 <h2 class="col-3 col-m-2">
 		 	<span style="color: yellow; line-height: 1.1em;">Currently working on:</span> First Draft
 		 </h2>
-		 <div class="col-9 col-m-9 intro">
+		 <div class="col-9 col-m-10 intro">
 			 <p>
 			 We're building the first draft now. 
 			 It develops how to build an extensive permanent colony on the Moon. 
@@ -108,7 +108,7 @@ rel='stylesheet' type='text/css'>
 		 <div class="col-2 col-m-2">
 			 <h3><a href="https://github.com/briligg/moonwards">GitHub page</a></h3>
 		 </div>
-		 <div class="col-7 col-m-7">
+		 <div class="col-7r8 col-m-7r8">
 		 <p>
 			 This is the Moonwards repository containing all its files, including the Blender files of all 
 			 models
@@ -118,7 +118,7 @@ rel='stylesheet' type='text/css'>
 		 <div class="col-2 col-m-2">
 			 <h3><a href="https://realtimeboard.com/app/board/o9J_k0iGgz4=/">Realtimeboard</a></h3>
 		 </div>
-		 <div class="col-7 col-m-7">
+		 <div class="col-7r8 col-m-7r8">
 		 <p>
 		 	This is a whiteboard service where all the planning is done. It has a lot of material, 
 		 	from rough ideas to resources to tweaking. If you want to comment on something there 
@@ -130,7 +130,7 @@ rel='stylesheet' type='text/css'>
 		 <div class="col-2 col-m-2">
 			 <h3><a href="https://sketchfab.com/briligg">Sketchfab account</a></h3>
 		 </div>
-		 <div class="col-7 col-m-7">
+		 <div class="col-7r8 col-m-7r8">
 		 <p>
 		 	Here are all the interactive 3d models of colony installations. Most are already embedded on the main 
 		 	page but a few aren't. You can download the Blender files for those objects there, as well.
@@ -140,7 +140,7 @@ rel='stylesheet' type='text/css'>
 		<div class="col-2 col-m-2">
 			 <h3><a href="https://space.stackexchange.com/">Space.SE</a></h3>
 		</div>
-		<div class="col-7 col-m-7">
+		<div class="col-7r8 col-m-7r8">
 		<p>
 			Have questions about stuff you see here? Space.SE is a great place to find out more, and if what you 
 			wanted to know isn't there, you can ask. 
