--- a/planning.html
+++ b/planning.html
@@ -29,9 +29,11 @@
 <link rel="stylesheet" href="css/accordian.css">
 <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,400italic,600,200'
 rel='stylesheet' type='text/css'>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
 <script src="js/modernizr-2.8.3.min.js"></script>
+<script src="js/accordian.js"></script>
     </head>
         <body>
         <!--[if lt IE 8]>
