--- a/learn.html
+++ b/learn.html
@@ -178,6 +178,9 @@ rel='stylesheet' type='text/css'>
                         <p id="resultLE3">&nbsp;</p>
                     </div>
                 </div>
+                <div class="black roundAll">
+                <a href="browsergame/shell.html"><img src="browsergame/images/link.png" alt="go to the browser game!"></a>
+                </div>
                 <div>
                 	<iframe width="640" height="480" src="https://sketchfab.com/models/67e479e1e9ea4ca5b4a43e09a39be4fe/embed" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe><p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
     <a href="https://sketchfab.com/models/67e479e1e9ea4ca5b4a43e09a39be4fe?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">CP Mission3 Lite</a>
@@ -217,9 +220,6 @@ A calculator implementation of this equation is at the top of this page.<br></p>
 			<p>TODO</p>
 			<h5>Orbit terminology:</h5>
 			<img class="realsize" src="img/orbit.png" height="519">
-			<p>
-(How does the CSS layout work here? I can not figure it out.)
-			</p>
 		    </div>
 		</div>
             <div class="col-12 col-m-12">     
