reorganize about.html
Former-commit-id: 3504256e37edf31e0f8ff8f51f126730762703e8

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@ rel='stylesheet' type='text/css'>
   				</ul>
   			<li><a href="about.html">Why</a>
   				<ul>
-  					<li><a href="about.html#plans">Plans Today</a></li>
+  					<li><a href="about.html">Why</a></li>
   					<li><a href="about.html#about">About Us</a></li>
   				</ul>
   			</li>
@@ -126,39 +126,27 @@ rel='stylesheet' type='text/css'>
 				</p>
 		</div>
 	</div>
-		<div class="rowR">
-			<div class="col-10r12 col-m-12">
-			<div class="darkYellow">
-				
-			</div>
-			<div class="darkYellow" id="plans">
-			<img src="http://www.moonwards.com/img/ILD-CGER-website.png" alt="A chart of all planned space exploration in the next 25 years">
-			<p>
-			The graphic above shows all the missions planned by all space agencies and private enterprise to 2033. 
-			(I will be trying to keep it up to date, if i've missed something drop me a note or mention it in the forum.) 
-			It gives a sense of how things are changing, how much more active space is becoming. 
-			</p>
-			</div>
-			</div>
-		</div>
+
 		<div class="rowR">
 			<div class="col-4 col-m-3" id="about">
 				<h3>About Us</h3>
 			</div>
+		</div>
+		<div class="rowL">
+			<div class="col-3 col-m-2">
+			<h3>Kim Holder</h3>
+			</div>
 			<div class="col-9 col-m-10 black">
 				<p>
-				Moonwards is just starting out. I do the lion's share of it right now, 
-				with help and inspiration here and there from 
-				the good people on <a href="http://www.space.stackexchange.com">space.stackexchange</a>. I have no 
-				background in the sciences, i went to art college after high school. Then to massage therapy 
+				I went to art college after high school. Then to massage therapy 
 				school when i realized i wasn't going to make any money from art. Then i trained at a Zen center 
 				when i burned out from doing massage (which happens a lot actually - the massage burn-out part). 
 				After that i, uh, sort of bounced around for a few years and eventually headed down to Mexico to try 
 				to return to my artwork, where i met my husband and ended up staying. I'm still here in central 
-				Mexico 13 years later. 
+				Mexico 14 years later. 
 				</p>
 				<p>
-				Two years ago, in August of 2013, i finally found the diet and lifestyle that allowed me to have a 
+				In August of 2013, i finally found the diet and lifestyle that allowed me to have a 
 				normal energy level. Before that i'd struggled with lethargy, dopiness, sleepiness, and accompanying 
 				anxiety. It was the first time as an adult i'd been free of that for more than a couple of weeks. 
 				My reaction quickly turned from 'Eureka!' to 'so now what?...'. I was in the middle of Mexico with 
@@ -188,6 +176,21 @@ rel='stylesheet' type='text/css'>
 				with people spread over the planet. I improve my knowledge of space exploration as i work on this 
 				project. I have high hopes that one way or another it will make a beneficial contribution.
 				</p>
+			</div>
+		</div>
+				<div class="rowR">
+			<div class="col-10r12 col-m-12">
+			<div class="darkYellow">
+				
+			</div>
+			<div class="darkYellow" id="plans">
+			<img src="http://www.moonwards.com/img/ILD-CGER-website.png" alt="A chart of all planned space exploration in the next 25 years">
+			<p>
+			The graphic above shows all the missions planned by all space agencies and private enterprise to 2033. 
+			(I will be trying to keep it up to date, if i've missed something drop me a note or mention it in the forum.) 
+			It gives a sense of how things are changing, how much more active space is becoming. 
+			</p>
+			</div>
 			</div>
 		</div>
 </div>
