First draft of my about section.
It is a little late, so I am probably going to change some of the more silly parts later.

Former-commit-id: 132c05ae48d0ad45fe26ec8ae0452e502774e2d5

--- a/about.html
+++ b/about.html
@@ -177,6 +177,26 @@ rel='stylesheet' type='text/css'>
 				</p>
 			</div>
 		</div>
+		<div class="rowL">
+			<div class="col-3 col-m-2">
+				<h3>Sigvart Brendberg</h3>
+			</div>
+			<div class="col-9 col-m-10 black">
+				<p>I am a Norwegian high-school student, currently getting a science education.
+				I live on a small and remote island, and dislike cities as much as you would expect.
+				In the process of learning math, physics and other cool stuff, I realized I was using the wrong operating system, and thus imidiately switched to Linux.
+				Starting there, I started my voyage to explore the world of free and open source software, computer programming, and the internet.</p>
+				<p>On the interwebs, I discovered the beauty of space exploration, the Stack Exchange community, and finally the stumbled upon this project, Moonwards.</p>
+				<p>In my free time, I code small games and simulators, play in a brass band, read tons of fantasy and science fiction,
+				hang out with my crazy high-school friends (me being the most crazy), spend some weekends herding smaller Southern Sami kids at camps, and attend some religious thingy.
+				(Jesus is a cool guy, comparable to Sergej Korolev and Isaac Newton).
+				Regarding political views, what happens on Earth stays on Earth. This is the Moon, and we have a lot of regolith to melt before we can start to fight each other. </p>
+				<p>As I have a lot of time this early in my life, the ambition is to learn as much as possible. Unicycling? No problem.
+				Here at Moonwards, I provide content to the <a href="http://moonwards.com/learn.html">learn page</a>, including a far from finished game.
+				Mostly however, I discuss new ideas with Kim.</p>
+			</div>
+		</div>
+
 				<div class="rowR">
 			<div class="col-10r12 col-m-12">
 			<div class="darkYellow">
