--- a/about.html
+++ b/about.html
@@ -184,7 +184,7 @@ rel='stylesheet' type='text/css'>
 			<div class="col-9 col-m-10 black">
 				<p>I am a Norwegian high-school student, currently getting a science education.
 				I live on a small and remote island, and dislike cities as much as you would expect.
-				In the process of learning math, physics and other cool stuff, I realized I was using the wrong operating system, and thus imidiately switched to Linux.
+				In the process of learning math, physics and other cool stuff, I realized I was using the wrong operating system, and thus immediately switched to Linux.
 				Starting there, I started my voyage to explore the world of free and open source software, computer programming, and the internet.</p>
 				<p>On the interwebs, I discovered the beauty of space exploration, the Stack Exchange community, and finally the stumbled upon this project, Moonwards.</p>
 				<p>In my free time, I code small games and simulators, play in a brass band, read tons of fantasy and science fiction,
