add TESS sketchfab
Former-commit-id: f2f30f0df25f1e8f769681e17ee2a488e84a6d45

--- a/learn.html
+++ b/learn.html
@@ -77,11 +77,10 @@ rel='stylesheet' type='text/css'>
   			</li>
   			<li><a href="learn.html">Learn</a>
   				<ul>
-  					<li><a href="learn.html#calculators">Calculators</a></li>
+  					<li><a href="learn.html#calculators">Interactives</a></li>
   				</ul>
   			<li><a href="about.html">Why</a>
   				<ul>
-  					<li><a href="about.html#plans">Plans Today</a></li>
   					<li><a href="about.html#about">About Us</a></li>
   				</ul>
   			</li>
@@ -95,12 +94,12 @@ rel='stylesheet' type='text/css'>
             <h2 class="col-3 col-m-4 yellow">Calculators</h2>
     </div>
     <div class="floatR col-9 col-m-8">
-				<p class="black roundAll">We have begun a collection of calculators that illustrate important aspects of the physics 
+				<p class="black roundAll">We have begun a collection of tools that illustrate important aspects of the physics 
             of various undertakings in space. Getting a feel for how your equipment interacts with the environment 
             is really central to designing life in space. We will expand and refine all these with time, making them 
             more intuitive with graphics, combining them, and so on.</p>
             <noscript><p>It seems like you do not have JavaScript enabled. If that is your intention, we are just telling you that the scripts on this site do not collect any data about you, and are only used for fonts and styling<br>
-            The calulators are also based on JavaScript, and they do not work without. They are free software under the terms of the GPL.</p></noscript>
+            The calculators are also based on JavaScript, and they do not work without it. They are free software under the terms of the GPL.</p></noscript>
    </div>
    </div>
 <br class="clearboth">
