--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@ rel='stylesheet' type='text/css'>
   				<ul>
   					<li><a href="learn.html#calculators">Calculators</a></li>
   				</ul>
-  			<li><a href="about.html">Why</a>
+  			<li><a href="why.html">Why</a>
   				<ul>
-  					<li><a href="about.html#about">About Us</a></li>
+  					<li><a href="why.html#about">About Us</a></li>
   				</ul>
   			</li>
   			<li><a href="http://www.moonwards.com/forum/">Forum</a></li>
