--- a/learn.html
+++ b/learn.html
@@ -77,11 +77,11 @@ rel='stylesheet' type='text/css'>
   			</li>
   			<li><a href="learn.html">Learn</a>
   				<ul>
-  					<li><a href="learn.html#calculators">Interactives</a></li>
+  					<li><a href="learn.html#interactives">Interactives</a></li>
   				</ul>
-  			<li><a href="about.html">Why</a>
+  			<li><a href="why.html">Why</a>
   				<ul>
-  					<li><a href="about.html#about">About Us</a></li>
+  					<li><a href="why.html#about">About Us</a></li>
   				</ul>
   			</li>
   			<li><a href="http://www.moonwards.com/forum/">Forum</a></li>
@@ -91,7 +91,7 @@ rel='stylesheet' type='text/css'>
 	</header>
 <div id="container">
     <div class="rowR" id="calculators">
-            <h2 class="col-3 col-m-4 yellow">Calculators</h2>
+            <h2 class="col-3 col-m-4 yellow">Interactives</h2>
     </div>
     <div class="floatR col-9 col-m-8">
 				<p class="black roundAll">We have begun a collection of tools that illustrate important aspects of the physics 
