--- a/planning.html
+++ b/planning.html
@@ -65,11 +65,11 @@ rel='stylesheet' type='text/css'>
   			</li>
   			<li><a href="learn.html">Learn</a>
   				<ul>
-  					<li><a href="learn.html#calculators">Calculators</li>
+  					<li><a href="learn.html#interactives">Interactives</li>
   				</ul>
-  			<li><a href="about.html">Why</a>
+  			<li><a href="why.html">Why</a>
   				<ul>
-  					<li><a href="about.html#about">About Us</a></li>
+  					<li><a href="why.html#about">About Us</a></li>
   				</ul>
   			</li>
   			<li><a href="http://www.moonwards.com/forum/">Forum</a></li>
