--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ rel='stylesheet' type='text/css'>
   			</li>
   			<li><a href="learn.html">Learn</a>
   				<ul>
-  					<li><a href="learn.html#calculators">Calculators</a></li>
+  					<li><a href="learn.html#interactives">Interactives</a></li>
   				</ul>
   			<li><a href="why.html">Why</a>
   				<ul>
