commentary on sketchfab models
Former-commit-id: c89d5a6618ccddb486aa63e0accaa209df8677c3

--- a/index.html
+++ b/index.html
@@ -466,28 +466,62 @@ a different place. All the current models and the mission timelines for them are
 						how to make building materials out of the basalt dust all over the dark areas of the Moon. In the vacuum of space this basalt feedstock will behave differently than such material on Earth, 
 						and it has a chemical make-up different than anything found here. It is absolutely free of hydrated minerals (with water molecules in their crystal structure) and organic chemicals, 
 						has a higher content of iron and titanium, and its chemicals are highly reduced (meaning they tend to have extra electrons). Analysis done on Earth indicates that could mean basalt 
-						materials on the Moon would be a lot <i>stronger</i> than they are here. We won't know until we experiment there.
+						materials on the Moon would be a lot <i>stronger</i> than they are here. We won't know until we experiment there. At any rate, cast basalt on Earth performs well as a construction 
+						material, and all the processes proposed are based on its known properties here.
 					</p>
 					<br class="clearboth">
 				<div class="floatL pad15">
 					<iframe width="640" height="480" src="https://sketchfab.com/models/346fb779ca474db4b31beb817b43e056/embed" 
 					frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
 				</div>
+				<p class="blackwide">
+					This sketch is even more sketchy than the others, more of a schematic really. Basalt rope and cloth are strong and durable here on 
+					Earth, and are made with a simple process. How that process will need to be adapted on the Moon is an open question. It can be done though. 
+					Beyond the early days when it is useful for infrastructure, cloth would also be useful for simple things like bedding, clothing, and curtains.
+				</p>
 				<br class="clearboth">
 				<div class="floatL pad15">
 					<iframe width="640" height="480" src="https://sketchfab.com/models/725b90da58d14b778ab155c85b1bd425/embed" 
 					frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
 				</div>
+				<p class="blackwide">
+					Here is the first venture into what could be done on the Moon once the scale necessary to build real towns exists. It is bold, but it is 
+					realistic. It can't be done without a great deal of investment, but on the other hand, that kind of investment would never make sense if 
+					this kind of structure wasn't what would come of it down the road. Later the construction method that will create it will be explored. 
+					The method has been optimized as much as possible. It relies on concentrated sunlight applied directly to the regolith to create 
+					trenches and anchor points, micro-charges of explosives to break up the ground for excavation, and the use of molten basalt 
+					and basalt cable and cloth to create the walls, storeys, supports, and most furnishings.
+				</p>
 				<br class="clearboth">
 				<div class="floatL pad15">
 					<iframe width="640" height="480" src="https://sketchfab.com/models/4846483593ec499b8d8fac77d38077ab/embed" 
 					frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>   
-				</div>		
+				</div>
+				<p class="blackwide">
+					This is a chemical process that will probably be useful on the Moon. A possible alternate approach to obtaining iron is to magnetically 
+					separate small particles high in iron using magnets, and then melting them down and skimming off the slag. The ilmenite approach would 
+					also require such a step but the feedstock might be much easier to obtain. And it creates the option of shipping only hydrogen from 
+					the poles instead of shipping water. That would save tremendously on the mass and thus the energy required for delivery, 
+					the most expensive element 
+					of the undertaking by far. Other approaches to this are being considered, and could displace this one. However, there will surely 
+					be a role for a unit of this kind, if not for this, then for processing of, say, aluminium.
+				</p>		
 				<br class="clearboth">
 				<div class="floatL pad15">
 					<iframe width="640" height="480" src="https://sketchfab.com/models/e15b90ff23b14041850c8433a3a47e3e/embed" 
 					frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
 				</div>
+				<p class="blackwide">
+					This model had some problems on Sketchfab and is being reprocessed. Please stand by.
+					<br>
+					The TESS, the Thermal Energy Storage System, is a centerpiece of this approach. It provides electricity generation 
+					both day and night. It captures vapors of pure oxygen, and chemicals 
+					such as oxides of potassium, phosphorus, and sodium - all very useful. The pond of lava depleted in these chemicals can be drawn off at the 
+					end of the day and taken for further processing that is much simplified by that state. It can be extended to increase capacity
+					without the need to duplicate any parts or to take the system offline. It isn't a very efficient system - 20% energy conversion 
+					is probably a decent estimate overall - but the fuel is free (sunlight), the system is highly durable, robust, and easy to repair, 
+					and most components could be fabricated right on the Moon early in the days of a settlement.
+				</p>
 				<br class="clearboth">
 	</div>
 	<br>
